# EclipseFP-HTF-test-example

./: .project  HLint.hs  Readme.md  TutorialHTF.cabal
src/Tutorial/: Lib.hs
test/: TutorialTest.hs
test/Tutorial/: LibTest.hs
